ruka-lang.org/src/lib/interpreter/fixtures/ok/hello-world.ruka
let main = () do
	let name = "world"
	ruka.println("Hello, ${name}!")
end
