ruka-lang.org/src/lib/interpreter/fixtures/type-err/non-exhaustive-match.ruka
// expect: non-exhaustive match
let Color = variant { red, green, blue }

let main = () do
	let c: Color = red
	match c with
		red   do "r"
		green do "g"
	end
end
